--- a/run_in_Actions/config.json
+++ b/run_in_Actions/config.json
@@ -24,7 +24,7 @@
             "medal_room": true,   //在所有拥有粉丝牌的直播间心跳，值为true或false分别代表开启和关闭，只有在有粉丝牌的房间心跳才能获取小心心(时间累加多个房间,没有开播也累加)
             "room_id": [],       // 直播间id，值为整数数组，除了上面的拥有粉丝牌的直播间还可以在其他直播间心跳
             "send_msg": "打卡",  // 向所有有粉丝牌的房间发送消息(作用是点亮粉丝牌和增加其密度)，值为字符串，为空字符串则不发送
-            "timeout": 45,       // 心跳分钟数，值为数字(单位分钟,允许小数),心跳的时间，达到时间退出
+            "timeout": 30,       // 心跳分钟数，值为数字(单位分钟,允许小数),心跳的时间，达到时间退出
         },
         "xlive_anchor_task": {   // 任务:参与直播天选时刻，下面为本功能详细配置
             "enable": true,          //任务开关，值为true或false分别代表开启和关闭
@@ -40,8 +40,8 @@
             "gift_filter": [],   //礼物名称黑名单，值为字符串数组，排除掉一些不需要参与的礼物
             "danmu_filter": [],  //弹幕过滤关键字，值为字符串数组，弹幕包含此值会被过滤
             "price_limit": 0,            //金瓜子上限，值为整数，投喂金瓜子超过此值会被过滤
-            "unfollow": true,            //等待参与的天选结束后取消关注，值为true或false分别代表开启和关闭，仅在需要关注主播时有效
-            "follow_group": "",          //用户分组名称，值为字符串，将需要关注的主播放进用户分组里，空字符串为"默认分组",若不存在自动创建
+            "unfollow": false,            //等待参与的天选结束后取消关注，值为true或false分别代表开启和关闭，仅在需要关注主播时有效
+            "follow_group": "天选时刻up",          //用户分组名称，值为字符串，将需要关注的主播放进用户分组里，空字符串为"默认分组",若不存在自动创建
             "clean_group_interval": 0,   //用户分组清理周期，值为整数，当日期能被此数整除时将follow_group参数指定的分组清空(全部取关),为0或者follow_group为空时不清空
             "search_interval": 300,     //搜索执行周期，值为整数(单位秒)，搜索直播间->抽奖->等待搜索周期->下一轮搜索
             "search_areas": [           //搜索区域数组，数组中每个值包含一个直播分区，在分区数组中搜索直播间
@@ -84,13 +84,13 @@
 
        /*--------- do_task存在3(即使用模式3)时的必填项(不存在则为无效项,可删除本区域)------------ */
             "search": {     // 指定用于搜索的视频关键字
-                "马保国": {  // 搜索关键字为马保国的视频
+                "光遇": {  // 搜索关键字为马保国的视频
                     "num": 5, // 搜索结果数量上限，值为整数，每个视频搜索结果投一个币 */
                     "order": 0, // 排序规则，值为整数，0综合排序(默认取值),1最多点击,2最新发布,3最多弹幕,4最多收藏
                     "duration": 0, // 时长规则，值为整数，0全部时长(默认取值),1十分钟以下,2三十分钟以下,3六十分钟以下,4以上
                     "tids": 0 // 分区规则，值为整数,0全部分区(默认取值),1动画,13番剧,167国创,3音乐,129舞蹈(分区太多篇幅有限不列举了)
                 }, 
-                "特朗普": {} // 这里括号为空,是因为括号里的参数全为可选参数，均可以不填写，值参照上面默认取值
+                "光遇": {} // 这里括号为空,是因为括号里的参数全为可选参数，均可以不填写，值参照上面默认取值
             // 以此类推后面添加更多关键字，前面的关键字视频投币数量不够才会搜索后面的(保证至少有一个关键字)
             }
        /*-----------------------------end---------------------------------------------------- */
