--- a/run_in_Actions/config.json
+++ b/run_in_Actions/config.json
@@ -37,7 +37,7 @@
                                               */
             "delay": 0,          //延迟，值为整数(单位秒)，每参与一次天选时刻延迟运行
             "room_filter": [],   //直播间黑名单，值为整数数组，指定直播间的天选将不会参与
-            "gift_filter": [],   //礼物名称黑名单，值为字符串数组，排除掉一些不需要参与的礼物
+            "gift_filter": ["船","舰长","自拍","照片"],   //礼物名称黑名单，值为字符串数组，排除掉一些不需要参与的礼物
             "danmu_filter": [],  //弹幕过滤关键字，值为字符串数组，弹幕包含此值会被过滤
             "price_limit": 0,            //金瓜子上限，值为整数，投喂金瓜子超过此值会被过滤
             "unfollow": false,            //等待参与的天选结束后取消关注，值为true或false分别代表开启和关闭，仅在需要关注主播时有效
