--- a/.github/workflows/run_BiliExp.yml
+++ b/.github/workflows/run_BiliExp.yml
@@ -2,7 +2,7 @@ name: 'run BiliExp'
 
 on:
   schedule:
-    - cron: '1 1-13/1 * * *' #每一小时执行一次，修改时注意时区
+    - cron: '* 4 * * *' #12执行一次，修改时注意时区
   watch:
     types: started
   workflow_dispatch:
