--- a/run_in_Actions/config.json
+++ b/run_in_Actions/config.json
@@ -37,12 +37,12 @@
                                               */
             "delay": 0,          //延迟，值为整数(单位秒)，每参与一次天选时刻延迟运行
             "room_filter": [],   //直播间黑名单，值为整数数组，指定直播间的天选将不会参与
-            "gift_filter": ["船","舰长","自拍","照片"],   //礼物名称黑名单，值为字符串数组，排除掉一些不需要参与的礼物
+            "gift_filter": ["船","舰长","自拍","照片","素颜"],   //礼物名称黑名单，值为字符串数组，排除掉一些不需要参与的礼物
             "danmu_filter": [],  //弹幕过滤关键字，值为字符串数组，弹幕包含此值会被过滤
             "price_limit": 0,            //金瓜子上限，值为整数，投喂金瓜子超过此值会被过滤
-            "unfollow": true,            //等待参与的天选结束后取消关注，值为true或false分别代表开启和关闭，仅在需要关注主播时有效
+            "unfollow": false,            //等待参与的天选结束后取消关注，值为true或false分别代表开启和关闭，仅在需要关注主播时有效
             "follow_group": "天选时刻up",          //用户分组名称，值为字符串，将需要关注的主播放进用户分组里，空字符串为"默认分组",若不存在自动创建
-            "clean_group_interval": 3,   //用户分组清理周期，值为整数，当日期能被此数整除时将follow_group参数指定的分组清空(全部取关),为0或者follow_group为空时不清空
+            "clean_group_interval": 1,   //用户分组清理周期，值为整数，当日期能被此数整除时将follow_group参数指定的分组清空(全部取关),为0或者follow_group为空时不清空
             "search_interval": 300,     //搜索执行周期，值为整数(单位秒)，搜索直播间->抽奖->等待搜索周期->下一轮搜索
             "search_areas": [           //搜索区域数组，数组中每个值包含一个直播分区，在分区数组中搜索直播间
                 {"paid": 1,"aid": 0,"sort": "","ps": 40},
