--- a/run_in_Actions/config.json
+++ b/run_in_Actions/config.json
@@ -180,8 +180,9 @@
         //  "msg_raw": null,    // msg_raw为完整的日志消息，用于下面hooks消息推送接口引用，若不引用最好注释掉，否则占用内存空间
 
             "title": "B站助手脚本消息推送", // 此为自定义变量，用于下面hooks消息推送接口引用
-            "SCKEY": "" ,
-        /*  "email": "",
+            "pushplus_token":"18e7e42d8da64981ae55560684c6a3c8"
+        /*  "SCKEY": "",
+            "email": "",
             "telegram_bot_token": "",
             "telegram_bot_chatid": "",
             "SKEY": "" */
@@ -194,7 +195,7 @@
                 "method": 1,
                 "url": "http://pushplus.hxtrip.com/send",
                 "params": {
-                    "token":"{18e7e42d8da64981ae55560684c6a3c8}",
+                    "token":"{pushplus_token}",
                     "topic":"Bilibili_Push",
                     "title": "{title}",
                     "content": "{msg_raw}"
