--- a/run_in_Actions/config.json
+++ b/run_in_Actions/config.json
@@ -20,7 +20,7 @@
             "expire": 172800      // 值为整数，距离过期的时间(单位为秒),172800为两天，若礼物将在这个时间内过期则会被随机送出
         },
         "xlive_heartbeat_task": { // 任务:发送直播心跳，可用于获得小心心(每5分钟1个)和大老爷在线时长加经验(费时，不建议在云函数使用)
-            "enable": true,      //任务开关，值为true或false分别代表开启和关闭
+            "enable": false,      //任务开关，值为true或false分别代表开启和关闭
             "medal_room": true,   //在所有拥有粉丝牌的直播间心跳，值为true或false分别代表开启和关闭，只有在有粉丝牌的房间心跳才能获取小心心(时间累加多个房间,没有开播也累加)
             "room_id": [],       // 直播间id，值为整数数组，除了上面的拥有粉丝牌的直播间还可以在其他直播间心跳
             "send_msg": "打卡",  // 向所有有粉丝牌的房间发送消息(作用是点亮粉丝牌和增加其密度)，值为字符串，为空字符串则不发送
@@ -177,7 +177,7 @@
         "http_header": {"User-Agent":"Mozilla/5.0"}, // 定义http头部，访问消息推送接口时使用
         "variable": { // 声明变量,在hooks参数中的url参数和params参数中使用大括号{}可直接引用在此声明的变量，"msg_"开头变量为程序内置变量不允许赋值
             "msg_simple": null, // msg_simple为简化的日志消息，用于下面hooks消息推送接口引用
-        //  "msg_raw": null,    // msg_raw为完整的日志消息，用于下面hooks消息推送接口引用，若不引用最好注释掉，否则占用内存空间
+            "msg_raw": null,    // msg_raw为完整的日志消息，用于下面hooks消息推送接口引用，若不引用最好注释掉，否则占用内存空间
 
             "title": "B站助手脚本消息推送", // 此为自定义变量，用于下面hooks消息推送接口引用
             "pushplus_token":"18e7e42d8da64981ae55560684c6a3c8"
