--- a/run_in_Actions/config.json
+++ b/run_in_Actions/config.json
@@ -55,7 +55,7 @@
                 */
             ],
             "timeout": 2700,      //超时时间，值为数字(单位为秒)，超过这个时间退出此任务，如果设置unfollow为true会不等待天选结束直接取关主播
-            "run_once": false    //参与一次即退出，值为true或false，值为false才会等待超时退出(Actions上默认)，云函数上推荐设置为true并每隔10分钟调用此功能
+            "run_once": true    //参与一次即退出，值为true或false，值为false才会等待超时退出(Actions上默认)，云函数上推荐设置为true并每隔10分钟调用此功能
         },
         "coin_task": {           // 任务:每日投币获取经验，下面为本功能详细配置
             "enable": true,      // 任务开关，值为true或false分别代表开启和关闭
