更新一些细节

--- a/run_in_Actions/config.json
+++ b/run_in_Actions/config.json
@@ -24,7 +24,7 @@
             "medal_room": true,   //在所有拥有粉丝牌的直播间心跳，值为true或false分别代表开启和关闭，只有在有粉丝牌的房间心跳才能获取小心心(时间累加多个房间,没有开播也累加)
             "room_id": [],       // 直播间id，值为整数数组，除了上面的拥有粉丝牌的直播间还可以在其他直播间心跳
             "send_msg": "打卡",  // 向所有有粉丝牌的房间发送消息(作用是点亮粉丝牌和增加其密度)，值为字符串，为空字符串则不发送
-            "timeout": 40,       // 心跳分钟数，值为数字(单位分钟,允许小数),心跳的时间，达到时间退出
+            "timeout": 45,       // 心跳分钟数，值为数字(单位分钟,允许小数),心跳的时间，达到时间退出
         },
         "xlive_anchor_task": {   // 任务:参与直播天选时刻，下面为本功能详细配置
             "enable": true,          //任务开关，值为true或false分别代表开启和关闭
@@ -84,7 +84,7 @@
 
        /*--------- do_task存在3(即使用模式3)时的必填项(不存在则为无效项,可删除本区域)------------ */
             "search": {     // 指定用于搜索的视频关键字
-                "光遇": {  // 搜索关键字为马保国的视频
+                "光遇": {  // 搜索关键字为光遇的视频
                     "num": 5, // 搜索结果数量上限，值为整数，每个视频搜索结果投一个币 */
                     "order": 0, // 排序规则，值为整数，0综合排序(默认取值),1最多点击,2最新发布,3最多弹幕,4最多收藏
                     "duration": 0, // 时长规则，值为整数，0全部时长(默认取值),1十分钟以下,2三十分钟以下,3六十分钟以下,4以上
